--- a/views/hello/edit.ejs
+++ b/views/hello/edit.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <title><%= title %></title>
+        <link rel='stylesheet' href="/stylesheets/style.css">
     </head>
 
     <body>
